panfrost t860: glmark2/bump:bump-render=height.trace regression with MR 15731
After looking at the IR dumps the only change seems to be the ordering in the packing of varyings so there shouldn't be a change in rendering. No other driver regresses on this trace with this MR.
I've attached the before and after shader IR dumps.before.txtafter.txt
Ping @icecream95 @alyssa for thoughts.