src/mesa/state_tracker/st_glsl_to_ir.cpp
@@ -139,8 +139,6 @@ link_shader(struct gl_context *ctx, struct gl_shader_program *prog)
       validate_ir_tree(ir);
    }
 
-   build_program_resource_list(&ctx->Const, prog);
-
    ret = st_link_nir(ctx, prog);
 
    return ret;
